added game delete funationality

--- a/main_app/templates/gamesdetail.html
+++ b/main_app/templates/gamesdetail.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Games Index</h1>
-  <a href='/games/create/'>Add a Game</a>
+  <h1>Games Detail</h1>
+  <a href="{% url 'games_update' game.id %}">Edit Game</a><br>
+  <a href="{% url 'games_delete' game.id %}">Delete Game</a><br><br><hr>
 
 <p>
-  {% for game in games %}
     <div>
       {{game.name}}<br><br>
       
-      {{game.date}}, {{game.year}}<br><br>
+      {{game.date}}<br><br>
 
       {{game.address}}<br>
       {{game.city}}, {{game.state}}<br><br>
@@ -17,10 +17,12 @@
       {{game.organizer}}<br>
       {{game.contact}}<br><br>
 
+      {{game.website}}<br>
+      {{game.facebook}}<br><br>
+
       {{game.description}}<br><br><hr><br>
 
     </div>
-  {% endfor %}
 </p>
 
 {% endblock %}
