added tailwind and added cards for the games index

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> 
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
   <title>
     NASGA
@@ -13,11 +14,25 @@
 </head>
 <body>
 <header>
-  <nav>
+
+
+
+
+
+
+<nav>
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/about">About</a></li>
-      <li><a href="/games">Games</a></li>
+      {% if user.is_authenticated %}
+        <li><a href="{% url 'home' %}">Home</a></li>
+        <li><a href="{% url 'about' %}">About</a></li>
+        <li><a href="{% url 'games' %}">Games</a></li>
+        <li><a href="{% url 'logout' %}">Log Out</a></li>
+      {% else %}
+        <li><a href="{% url 'home' %}">Home</a></li>
+        <li><a href="{% url 'about' %}">About</a></li>
+        <li><a href="{% url 'games' %}">Games</a></li>
+        <li><a href="{% url 'home' %}">Login</a></li>
+      {% endif %}
     </ul>
   </nav>
 </header>
