--- a/main_app/templates/games.html
+++ b/main_app/templates/games.html
@@ -2,7 +2,10 @@
 
 {% block content %}
   <h1>Games Index</h1>
-  <a href='/games/create/'>Add a Game</a><br><br><hr><br>
+
+  {% if user.is_authenticated %}
+    <a href='{% url 'games_create' %}'>Add a Game</a><br><br><hr><br>
+  {% endif %}
 
 
   {% for game in games %}
@@ -13,9 +16,50 @@
 
       {{game.date}}<br><br>
 
-      <a href="{% url 'gamesdetail' game.id %}">More Details</a><br><br><hr><br>
+      <a href="{% url 'games_detail' game.id %}">Details</a><br><br><hr><br>
 
     </div>
   {% endfor %}
+
+
+
+
+<main class="flex flex-row w-full min-h-screen bg-green-200 items-center justify-evenly">
+  {% for game in games %}
+    <div class="rounded-lg">
+        <div class="bg-gray-100 rounded-lg w-96">
+            <img src="https://unsplash.it/640/425" alt=""
+                class="w-full h-48 transition duration-300 rounded-t-lg sm:h-56 opacity-80 hover:opacity-100" />
+
+            <div class="px-10 py-6 mb-10 text-center">
+              <div class="mb-4 text-3xl font-bold text-purple-600 uppercase">
+                {{game.name}}
+              </div>
+                <span class="text-sm">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate tempore eligendi magnam
+                    distinctio molestias. Incidunt at consequuntur consequatur
+                    officiis repudiandae! Culpa cum vel tenetur itaque eius provident voluptatum similique impedit?
+                </span>
+            </div>
+            <a href="{% url 'games_detail' game.id %}">
+            <button
+                class="w-full h-16 text-lg font-extrabold text-gray-100 transition duration-300 bg-purple-600 rounded-b-lg hover:bg-purple-700">VIEW
+                DETAILS</button>
+            </a>
+        </div>
+    </div>
+  {% endfor %}
+</main>
+
+
+
+
+
+
+
+
+
+
+
 
 {% endblock %}
