--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -2,4 +2,19 @@
 
 {% block content %}
   <h1>Home Page</h1>
+
+{% if user.is_authenticated %}
+<div class="">You are logged in!</div>
+{% else %}
+<section>
+  <form action="{% url 'home' %}" method="post">
+    <h1>Login</h1>
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="hidden" name="next" value="{{ next }}">
+    <button type="submit">Login</button>
+  </form>
+</section>
+{% endif %}
+
 {% endblock %}
