--- a/main_app/templates/games.html
+++ b/main_app/templates/games.html
@@ -5,60 +5,52 @@
   {% comment %} {% if user.is_authenticated %}
     <a href='{% url 'games_create' %}'>Add a Game</a><br><br><hr><br>
   {% endif %}
+{% endcomment %}
 
 
+
+
+
+<main class="flex flex-row flex-wrap w-full min-h-screen bg-white items-center justify-evenly ">
   {% for game in games %}
-    <div>
-      <b>{{game.name}}</b><br><br>
-      
-      <i>{{game.city}}, {{game.state}}</i><br><br>
+    <div class="rounded-lg shadow-2xl my-10">
+        <div class="bg-gray-100 rounded-lg w-80">
+            <img src="https://www.scotlandinfo.eu/wp-content/uploads/2019/09/glencoe-2541548_1920.jpg" alt=""
+                class="w-full h-48 transition duration-300 rounded-t-lg sm:h-56 opacity-80 hover:opacity-100"/>
 
-      {{game.date}}<br><br>
-
-      <a href="{% url 'games_detail' game.id %}">Details</a><br><br><hr><br>
-
-    </div>
-  {% endfor %} {% endcomment %}
-
-
-
-
-<main class="flex flex-row flex-wrap w-full min-h-screen bg-green-200 items-center justify-evenly">
-  {% for game in games %}
-    <div class="rounded-lg" id="gamecard">
-        <div class="bg-gray-100 rounded-lg w-96" >
-            <img src="https://unsplash.it/640/425" alt=""
-                class="w-full h-48 transition duration-300 rounded-t-lg sm:h-56 opacity-80 hover:opacity-100" />
-
-            <div class="px-10 py-6 mb-10 text-center">
-              <div class="mb-4 text-3xl font-bold text-purple-600 uppercase">
-                {{game.name}}
+            <div class="px-10 py-6 mb-2 text-center">
+              <div class="mb-4 text-2xl font-bold text-purple-600 uppercase celtfont h-24 items-center flex items center justify-center">
+                <div>{{game.name}}</div>
               </div>
-                <span class="text-sm">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate tempore eligendi magnam
-                    distinctio molestias. Incidunt at consequuntur consequatur
-                    officiis repudiandae! Culpa cum vel tenetur itaque eius provident voluptatum similique impedit?
-                </span>
+              <div class="flex flex-col h-full">
+                <div class="mb-4 text-1xl">
+                  <i class='bx bxs-map bx-lg'></i>
+                  {{game.city}}, {{game.state}}
+                </div>
+                <div class="text-1xl">
+                  <i class="bx bxs-calendar"></i>&nbsp; 
+                  {{game.date}}
+                </div>
+              </div>
             </div>
             <a href="{% url 'games_detail' game.id %}">
             <button
-                class="w-full h-16 text-lg font-extrabold text-gray-100 transition duration-300 bg-purple-600 rounded-b-lg hover:bg-purple-700">VIEW
+                class="w-full h-16 text-lg font-extrabold text-gray-100 transition duration-300 bg-yellow-600 rounded-b-lg hover:bg-yellow-700 celtfont">VIEW
                 DETAILS</button>
             </a>
         </div>
     </div>
   {% endfor %}
 </main>
-
-
-
-
-
-
-
-
-
-
-
-
 {% endblock %}
+
+
+
+
+
+
+
+
+
+
+
