--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -4,43 +4,46 @@
 
 {% block content %}
 
+<div class="flex flex-row h-full   justify-end">
+    <div class="flex flex-col p-32 overflow-y-scroll h-full justify-center items-center bg-gray-50">
+      <p class="mb-5 leading-8">
+        All around the world people participate or are spectators at Scottish Highland Games. Seen as a way of celebrating Scottish and Celtic culture it is one of Scotland’s biggest cultural exports. Features of the Games include competitions in piping and drumming, dancing, heavy athletics, as well all kinds entertainment and exhibits related to many aspects of Scottish and Gaelic culture.
+      </p>
+      <p class="my-5 leading-8">
+        The first historical reference to the type of events held at Highland Games in Scotland was made during the time of King Malcolm III (Scottish Gaelic: Máel Coluim; c. 1031 – 13 November 1093) when he summoned men to race up Craig Choinnich overlooking Braemar with the aim of finding the fastest runner in Scotland to be his royal messenger. They were also thought to have originally been events where the strongest and bravest soldiers in Scotland would be tested. These gatherings were not only about trials of strength. Musicians and dancers were encouraged to reveal their skill and talents and so be a great credit to the clan that they represented.
+      </p>
+      
+      <p class="my-5 leading-8">
+        There are about 100 Highland Games in Scotland every year. The Ceres Games in Fife, which began in 1314, are thought to be the oldest, continuous Highland Games in Scotland. They proudly state that the Ceres Highland Games are ‘held in honour of the brave men of Ceres who fought at Bannockburn.’ The Battle of Bannockburn (Scottish Gaelic: Blàr Allt nam Bànag) on 24 June 1314 was a major Scottish victory against the English in the First War of Scottish Independence.
+      </p>
+      <p class="my-5 leading-8">
+        The Cowal Highland Gathering, held in Dunoon (Scottish Gaelic: Dùn Omhain), Scotland, annually in August, is the largest Highland games in the world. The Braemar Gathering is often thought to be the best known games and traces its origins in the games held by King Malcolm III. These events in Scotland are mirrored around the world with remarkably well attended gatherings in the United States, for example Grandfather Mountain Highland Games in North Carolina and the Caledonian Club of San Francisco event at Pleasanton, California.
+      </p>
 
-<div class="flex flex-row w-full h-full">
-  <div class="flex flex-col justify-center items-center w-full bg-gray-50">
-    <div class="flex flex-col m-32">
-  <p class="my-5">
-    The story of the Highland Games is a colorful story of sports, culture and community, a celebration of the heritage and history of Scotland and the Scottish Highlands.
-  </p>
-  <p class="my-5">
-    Highland Games are thought to have originated from the great gatherings and fairs held by Scottish Highland clans since medieval times, where the clans would compete against each other in feats of strength and skill.  The clan chieftains would select their strongest, fastest and fittest warriors to represent the clan on the field of honor. Some say that the Games even date back to 2000 BC in Ireland, before they crossed the water to Scotland with the fourth and fifth century migrations of the Scotti into Argyll and beyond.
-  </p>
-  <p class="my-5">
-    The modern Games are a mix of field and track events, piping, and Highland dance as well as 'heavy events' like the tug-o-war or the hammer throw and the caber-toss.  The program is remarkably unchanged since those early medieval clan gatherings.
-  </p>
-  <p class="my-5">
-    So what are some of these ancient games of skill and strength?  There’s the “tossing of ye bar”, or caber tossing, wherein a long tapered pine pole is balanced and then tossed, turning end over end,  larger end hitting the ground first in as perfect a 12 0’clock position as possible – called “turning the caber”.  There’s the stone put - not unlike the shot put in the Olympics, except that a large stone, up to 26 pounds, is used!  There is the one-handed weight-for-distance throw, featuring a metal weight up to 56 pounds on a chain – longest throw wins.  Or the sheaf toss, where a 20 pound straw bundle is tossed over a high raised bar with a pitchfork.
-  </p>
-  <p class="my-5">
-    The Games have always celebrated Highland culture with its poets and bards, music and dance as well as its sports. Dancing, piping, fiddling, and playing the Gaelic harp are all part of the Games, usually with a competitive element.  Clan chieftains use to pit their pipers against those of other clans, and enormous prestige came with victory.  And no Games are complete without the unforgettable massing of the pipe bands with their tartans swirling to open and close the event.
-  </p>
-</div>
-  </div>
-  <div class="overflow-hidden min-w-max">
+      <p class="my-5 leading-8">
+        The history of the Highland Games has not always been a smooth one. The development of this showcase of Highland culture was severely disrupted following Scottish defeat at the Battle of Culloden (Scottish Gaelic: Blàr Chùil Lodair). The 1746 Proscription Acts were passed in a deliberate attempt by the British to dismantle Scottish Highland life, culture, society and destroy the clan system. These laws were finally repealed on 1 July 1782. The Highland Games really only started to develop again after the 18th and 19th Highland Clearances, a brutal process of evictions that attacked the Gaelic culture of the Highlands.
+      </p>
+      <p class="my-5 leading-8">
+        Scottish traditions and culture were spread as people from Scotland moved around the world. Caledonian Societies were formed in Canada, New Zealand, the United States, Australia and wherever around the globe Scots met and reunited.  The first form of Highland Games in the United States took place in 1836 and was organised by the Highland Society of New York. Followed a few years later by the Caledonian Club of San Francisco. Now there are Highland Games held in many places throughout the world. Traditionally some events have become standard in these games such as the caber toss, stone put, Scottish hammer throw, weight throw, weight over the bar, sheaf toss and maide leisg (lazy stick). However, these gathering now have a whole variety of events, stalls, entertainments, pipes, dancing and all kinds of competitions.
+      </p>
+      <p class="my-5 leading-8">
+        This great Scottish cultural export is set to continue to grow. Both in the Scottish homeland and all around the world where people want to celebrate their Scottish heritage.
+      </p>
+      <p class="mt-20 leading-8 text-xs">
+        Source:
+        <a href="https://www.transceltic.com/scottish/history-of-highland-games">
+          <i class="text-blue-600">
+            https://www.transceltic.com/scottish/history-of-highland-games
+          </i>
+        </a>
+      </p>
+    </div>
+
+  <div class="min-w-max h-full">
     <img src="{% static 'images/action4.jpeg' %}" class="opacity-90 hover:opacity-100 object-cover h-full">
   </div>
-</div>
+   
+</div> 
 
 
-
-
-
-
-
-
-
-
-
-  
-  
-  
 {% endblock %}
