--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -9,10 +9,15 @@
     <p class="text-center italic text-xl font-semibold leading-9">Welcome to the North American Scottish Games Association!</p><br>
     <p class="text-center italic text-lg leading-9"><u>NASGA</u> was founded in 1976 and is dedicated to the promotion and understanding of Scottish Heavy Events competition in North America and to inform athletes, judges, officials, and all other interested persons of news and results of Scottish Highland Games held throughout North America.</p>
   </div>
-  <div class="bg-gray-50 border-4 border-yellow-300 opacity-70 mt-52 rounded-full py-3 px-6 hover:opacity-80 text-2xl">
-    <a href="">
-      Game Button
-    </a>
+  <div class="bg-gray-50 border-4 border-yellow-300 opacity-70 mt-48 rounded-full hover:opacity-90">
+    <div class="rounded-full w-72 h-40 flex items-center justify-center overflow-hidden" id="flagbutton">
+      <div class="text-4xl stonefont text-red-600">
+        <a href="{% url 'games' %}" class="">
+          GAMES
+        </a>
+      </div>
+      
+    </div>
   </div>
 </div>
 
