--- a/main_app/templates/games.html
+++ b/main_app/templates/games.html
@@ -1,46 +1,45 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block content %}
 
-  {% comment %} {% if user.is_authenticated %}
-    <a href='{% url 'games_create' %}'>Add a Game</a><br><br><hr><br>
+{% comment %} {% if user.is_authenticated %}
+  <a href='{% url 'games_create' %}'>Add a Game</a><br><br><hr><br>
   {% endif %}
 {% endcomment %}
 
-
-
-
-
-<main class="flex flex-row flex-wrap w-full min-h-screen bg-white items-center justify-evenly ">
+<main class="bg-blue-300 bg-auto h-full w-full">
+  <div class="w-screen flex flex-row flex-wrap items-center justify-evenly">
   {% for game in games %}
-    <div class="rounded-lg shadow-2xl my-10">
-        <div class="bg-gray-100 rounded-lg w-80">
-            <img src="https://www.scotlandinfo.eu/wp-content/uploads/2019/09/glencoe-2541548_1920.jpg" alt=""
+    <div class="rounded-lg shadow-2xl my-10 mx-4">
+        <div class="bg-gray-100 rounded-lg w-72">
+            <img src="{% static 'images/cardimg.jpeg' %}" alt=""
                 class="w-full h-48 transition duration-300 rounded-t-lg sm:h-56 opacity-80 hover:opacity-100"/>
-
-            <div class="px-10 py-6 mb-2 text-center">
-              <div class="mb-4 text-2xl font-bold text-purple-600 uppercase celtfont h-24 items-center flex items center justify-center">
+            <div class="px-10 py-4 text-center">
+              <div class="mb-4 text-2xl text-purple-600 uppercase celtfont h-20 items-center flex items center justify-center">
                 <div>{{game.name}}</div>
               </div>
               <div class="flex flex-col h-full">
-                <div class="mb-4 text-1xl">
-                  <i class='bx bxs-map bx-lg'></i>
-                  {{game.city}}, {{game.state}}
+                <div class="text-1xl h-12 flex items-center justify-center">
+                  <div class="w-12"><i class='bx bxs-map bx-lg'></i></div>
+                  <div class="">{{game.city}}, {{game.state}}</div>
                 </div>
-                <div class="text-1xl">
-                  <i class="bx bxs-calendar"></i>&nbsp; 
-                  {{game.date}}
+                <div class="text-1xl h-12 flex items-center justify-center">
+                  <div class="w-12"><i class="bx bxs-calendar"></i></div> 
+                  <div class="">{{game.date}}</div>
                 </div>
               </div>
             </div>
             <a href="{% url 'games_detail' game.id %}">
             <button
-                class="w-full h-16 text-lg font-extrabold text-gray-100 transition duration-300 bg-yellow-600 rounded-b-lg hover:bg-yellow-700 celtfont">VIEW
+                class="-mt-2 w-full h-12 text-lg font-extrabold text-gray-100 transition duration-300 bg-yellow-600 rounded-b-lg hover:bg-yellow-700 celtfont">VIEW
                 DETAILS</button>
             </a>
         </div>
     </div>
   {% endfor %}
+    </div>
 </main>
 {% endblock %}
 
