fixes styling bug on history page

--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -34,7 +34,6 @@ html {
   background-position: center;
 }
 
-#aboutscroll {
-  overflow-y: scroll;
+.heightMinusNav {
+  height: calc(100% - 5rem);
 }
-
