--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 
-<div class="flex flex-row h-full   justify-end">
-    <div class="flex flex-col p-32 overflow-y-scroll h-full justify-center items-center bg-gray-50">
+<div class="flex flex-row justify-end heightMinusNav">
+    <div class="flex flex-col px-32 py-20 overflow-y-scroll  bg-gray-50">
       <p class="mb-5 leading-8">
         All around the world people participate or are spectators at Scottish Highland Games. Seen as a way of celebrating Scottish and Celtic culture it is one of Scotland’s biggest cultural exports. Features of the Games include competitions in piping and drumming, dancing, heavy athletics, as well all kinds entertainment and exhibits related to many aspects of Scottish and Gaelic culture.
       </p>
@@ -39,7 +39,7 @@
       </p>
     </div>
 
-  <div class="min-w-max h-full">
+  <div class="min-w-max">
     <img src="{% static 'images/action4.jpeg' %}" class="opacity-90 hover:opacity-100 object-cover h-full">
   </div>
    
